<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup3"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tool_bar_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/circular_bg_toolbar"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vector_arrow_back" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrolle_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_20">

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_bg"
                    android:drawableStart="@drawable/ic_vector_signup"
                    android:drawablePadding="@dimen/dp_10"
                    android:hint="@string/enter_full_name"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/full_name_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_bg"
                    android:drawableStart="@drawable/ic_vector_email"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/date_of_birth"
                app:layout_constraintEnd_toStartOf="@+id/gender_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_bg"
                    android:drawableStart="@drawable/ic_vector_calendar"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dob_input"
                app:layout_constraintTop_toBottomOf="@+id/email_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gender_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_bg"
                    android:drawableEnd="@drawable/ic_vector_drop_down_arrow"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                style="TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/create_your_password"
                app:layout_constraintTop_toBottomOf="@+id/gender_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt"
                    style="TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_bg"
                    android:drawableStart="@drawable/ic_vector_password"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_acc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/rounded_button_bg"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                android:onClick="onCreateAccountButtonClick" />

            />

            <TextView
                android:id="@+id/tv_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:text="@string/terms_privacy"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_acc_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
