<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verifyfinal"
    tools:context=".VerificationActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tool_bar_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="40dp"
        android:background="@drawable/circular_bg_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vector_arrow_back" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:text="Verification code"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_ic" />

    <com.chaos.view.PinView
        android:id="@+id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        app:itemBackground="@drawable/rounded_button_white"
        app:itemCount="4"
        app:itemHeight="50dp"
        app:itemSpacing="20dp"
        app:itemWidth="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/terms_privacy"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_acc_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dp_28"
        android:background="@drawable/rounded_button_bg"
        android:onClick="onLoginButtonClick"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <TextView
        android:id="@+id/tv_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_acc_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
